test/arrays/diten/arrayFront2D.good
arrayFront2D.chpl:3: error: first() is only supported on 1D rectangular arrays
