test/arrays/diten/arrayFront2D.chpl
var A: [1..3, 1..3] int;

writeln(A.front());
